--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://tenor.com/bPkfo.gif" frameborder="0" allowfullscreen></iframe>
+    <div class="tenor-gif-embed" data-postid="24586548" data-share-method="host" data-aspect-ratio="1.78771" data-width="100%"><a href="https://tenor.com/view/pixelplace-gif-24586548">Pixelplace GIF</a>from <a href="https://tenor.com/search/pixelplace-gifs">Pixelplace GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 </body>
 </html>
